Added a notice file with instructions for other parties to use this code

--- a/Rhi.Isncsci.Tests/Rhi.Isncsci.Tests.csproj
+++ b/Rhi.Isncsci.Tests/Rhi.Isncsci.Tests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Notice.txt" />
     <Content Include="Rhi.Isncsci.Tests-License.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
