--- a/Rhi.Isncsci/Rhi.Isncsci.csproj
+++ b/Rhi.Isncsci/Rhi.Isncsci.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Notice.txt" />
+    <Content Include="Notice.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Rhi.Isncsci-License.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
